--- a/paragon/_overrides.scss
+++ b/paragon/_overrides.scss
@@ -374,6 +374,7 @@ header .btn.btn-uar-lang-sel>span {
   min-width: 100% !important;
   background-color: #5708ab !important;
   padding-top: 0.5rem;
+  margin-top: 12px !important;
 }
 
 @media (max-width: 767.9px) {
@@ -464,6 +465,7 @@ header .btn.btn-uar-lang-sel>span {
 
 .course-tabs-navigation {
   border-bottom: none !important;
+  z-index: 2000;
 }
 
 .uar-footer-link-text {
@@ -472,4 +474,18 @@ header .btn.btn-uar-lang-sel>span {
 
 .pgn__checkpoint {
   z-index: 999999 !important;
+}
+.uar-disc-sidebar .collapsible-body{
+  max-width: 100vw !important;
+  overflow: auto !important;
+  font-size: 10px !important;
+  padding: 0 4px 32px 4px !important;
+}
+.uar-disc-sidebar .collapsible-body .pgn__icon{
+  width: 1rem !important;
+  height: 1rem !important;
+}
+.header-action-bar .nav-pills .nav-item{
+  margin-top: 0.5rem !important;
+  margin-bottom: 0.5rem !important;
 }
