--- a/paragon/_overrides.scss
+++ b/paragon/_overrides.scss
@@ -52,25 +52,35 @@
   }
 
   .uar-footer {
-    padding-bottom: 50px;
+    padding-bottom: 55px;
   }
 
   .uar-top-menu-container {
     position: fixed;
-    z-index: 999;
-    bottom: 0;
-    height: 50px !important;
-    border-top: 1px solid #5708ab;
     left: 0;
+    bottom: 0;
+    height: 55px!important;
+    max-height: 55px !important;
+    min-height: 55px !important;
+    z-index: 99999;
+    width: 100vw !important;
+    max-width: 100vw !important;
+    min-width: 100vw !important;
+    box-shadow: 0 6px 6px -3px rgb(0 0 0 / 20%), 0 10px 14px 1px rgb(0 0 0 / 14%), 0 4px 18px 3px rgb(0 0 0 / 12%);
+    border-radius: 12px 12px 0 0 !important;
   }
 
   .uar-top-menu-container .uar-top-menu {
-    font-size: 8px !important;
-    width: 25% !important;
+    align-items: center;
     display: flex;
     flex-direction: column;
+    font-size: 8px !important;
     justify-content: space-between;
-    align-items: center;
+    overflow: hidden;
+    width: calc(25% - 1rem) !important;
+    max-width: calc(25% - 1rem) !important;
+    min-width: calc(25% - 1rem) !important;
+    border-top: 2px solid transparent;
   }
 
   .uar-top-menu-container .uar-top-menu .uar-top-menu-icon {
@@ -78,9 +88,11 @@
     height: 18px !important;
     color: #5708ab !important;
   }
-
+  .uar-top-menu-container .uar-top-menu .uar-top-menu-text{
+    line-height: 1.2 !important;
+  }
   .uar-top-menu-container .uar-top-menu.active {
-    border-top: 2px solid #5708ab !important;
+    border-top-color: #5708ab!important;
   }
 
   .uar-top-menu-container .uar-top-menu i.fas,
