change menu active border bottom color

--- a/paragon/_overrides.scss
+++ b/paragon/_overrides.scss
@@ -130,7 +130,7 @@
     padding-bottom: .5rem;
   }
   .uar-top-menu.active {
-    border-bottom: 2px solid #5708ab !important;
+    border-bottom: 2px solid #4d4d4d !important;
   }
   .uar-top-menu:hover{
     background-color: #e9e6e4 !important;
