--- a/paragon/_overrides.scss
+++ b/paragon/_overrides.scss
@@ -171,6 +171,7 @@
 }
 .dropdown.user-dropdown .dropdown-menu {
   min-width: 10rem !important;
+  padding: 0 !important;
 }
 .dropdown.user-dropdown .dropdown-menu a.dropdown-item{
   font-size: 14px !important;
