--- a/paragon/_overrides.scss
+++ b/paragon/_overrides.scss
@@ -160,6 +160,7 @@
 }
 .dropdown.user-dropdown button.dropdown-toggle svg.fa-user-circle{
   font-size: 18px !important;
+  margin-right: 4px !important;
 }
 .dropdown.user-dropdown button.dropdown-toggle span{
     max-width: 80px;
