--- a/paragon/_overrides.scss
+++ b/paragon/_overrides.scss
@@ -169,6 +169,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
     font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji!important;
+    font-weight: 400 !important;
 }
 .dropdown.user-dropdown .dropdown-menu {
   min-width: 10rem !important;
